syntax = "proto3";

import "Proto_Common.proto";
package YouYou.Proto;

//网关服务器返回注册客户端结果[c#]
message GWS2C_ReturnRegClient
{
    bool Result = 1;//结果
}